feat : 메인페이지 제작

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,31 @@
+.t_bold {
+  font-weight: 700;
+}
+.flex-box {
+  display: flex;
+}
+.flex-middle {
+  align-items: center;
+}
+.flex-center {
+  justify-content: center;
+}
+.flex-between {
+  justify-content: space-between;
+}
+.t_center {
+  text-align: center;
+}
+.t_small {
+  font-size: 14px;
+}
+.t_big {
+  font-size: 20px;
+}
+input {
+  width: 200px;
+  border: 1px solid black !important;
+}
 html,
 body {
   width: 100%;
@@ -7,4 +35,13 @@ body {
 img {
   display: block;
   width: 100%;
+}
+#container {
+  width: 100%;
+  height: 100%;
+}
+#wrap {
+  max-width: 1024px;
+  padding: 0 20px;
+  margin: auto;
 }
