--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap");
 html,
 body,
 div,
@@ -82,15 +83,13 @@ video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
+  font-size: 16px;
   font: inherit;
   vertical-align: baseline;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 400;
 }
-* {
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
-}
+
 input {
   border: none;
   outline: none;
@@ -121,7 +120,7 @@ div,
 input {
   box-sizing: border-box;
 }
-Img {
+img {
   display: block;
 }
 blockquote,
