--- a/css/reset.css
+++ b/css/reset.css
@@ -88,6 +88,8 @@ video {
   vertical-align: baseline;
   font-family: "Noto Sans KR", sans-serif;
   font-weight: 400;
+  font-size: 14px;
+  /*  */
 }
 
 input {
