--- a/css/main.css
+++ b/css/main.css
@@ -1,50 +1,167 @@
 .t_bold {
-  font-weight: 700;
+    font-weight: 700;
 }
 .flex-box {
-  display: flex;
+    display: flex;
 }
 .flex-middle {
-  align-items: center;
+    align-items: center;
 }
 .flex-center {
-  justify-content: center;
+    justify-content: center;
 }
 .flex-between {
-  justify-content: space-between;
+    justify-content: space-between;
+}
+.flex-middle {
+    align-items: center;
 }
 .t_center {
-  text-align: center;
+    text-align: center;
 }
 .t_small {
-  font-size: 14px;
+    font-size: 14px;
 }
 .t_big {
-  font-size: 20px;
+    font-size: 20px;
 }
-input {
-  width: 200px;
-  border: 1px solid black !important;
+.ml5 {
+    margin-left: 5px;
 }
+.ml10 {
+    margin-left: 10px;
+}
+.ml20 {
+    margin-left: 20px;
+}
+.ml30 {
+    margin-left: 30px;
+}
+.opa0 {
+    opacity: 0;
+}
+.opa1 {
+    opacity: 1;
+}
+.hide {
+    display: none;
+}
+.show {
+    display: block;
+}
+.notVb {
+    opacity: 0;
+    visibility: hidden;
+}
+.vb {
+    opacity: 1;
+    visibility: visible;
+}
+body[data-theme='light'] .container {
+    background: #e2e2e2;
+}
+body[data-theme='dark'] .container {
+    background: #111;
+}
+body[data-theme='light'] header {
+    background-color: #fff;
+    color: #000;
+}
+body[data-theme='dark'] header {
+    background-color: #000;
+    color: #fff;
+}
+input:focus {
+    outline: none;
+}
+
 html,
 body {
-  width: 100%;
-  height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 img {
-  display: block;
-  width: 100%;
-}
-/*  */
-#container {
-  width: 100%;
-  /* s */
-  height: 100%;
+    display: block;
+    width: 100%;
 }
 
-#wrap {
-  max-width: 1024px;
-  padding: 0 20px;
-  margin: auto;
+.container {
+    width: 100%;
+    overflow-y: scroll;
+    height: 100%;
+    position: relative;
+    background: #e2e2e2;
+    transition: all 0.2s;
+}
+.container::-webkit-scrollbar {
+    display: none;
+}
+
+.wrap {
+    max-width: 1240px;
+    padding: 0 20px;
+    margin: auto;
+}
+header {
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    background-color: #fff;
+    transition: all 0.2s;
+}
+main {
+    width: 100%;
+}
+#logo {
+    width: 80px;
+    height: 80px;
+}
+#sectionFirst {
+    margin-top: 80px;
+    /* height: 3000px; */
+}
+
+#sectionFirst .mainContent {
+    height: 100%;
+}
+#sectionFirst .mainList {
+    position: sticky;
+    top: 200px;
+    width: 300px;
+    height: 300px;
+    margin: 200px auto 0 auto;
+    background-color: black;
+    border-radius: 8px;
+    transition: all 0.5s;
+}
+
+#sectionFirst .mainList:first-child {
+    background-color: black;
+}
+#sectionFirst .mainList:last-child {
+    background-color: blueviolet;
+}
+#loginFormModal {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    transition: all 0.3s;
+}
+#loginFormModal .loginBg {
+    background: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    height: 100%;
+}
+#loginFormModal .loginForm {
+    width: 500px;
+    height: 300px;
+    padding: 20px;
+    background: #fff;
+    border-radius: 8px;
+    margin: auto;
+    transform: translateY(calc(50vh - 150px));
 }
