--- a/css/reset.css
+++ b/css/reset.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap');
 html,
 body,
 div,
@@ -80,22 +80,21 @@ time,
 mark,
 audio,
 video {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  font-size: 16px;
-  font: inherit;
-  vertical-align: baseline;
-  font-family: "Noto Sans KR", sans-serif;
-  font-weight: 400;
-  font-size: 14px;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 20px;
+    font: inherit;
+    vertical-align: baseline;
+    font-family: 'Noto Sans KR', sans-serif;
+    font-weight: 400;
 }
 
 input {
-  border: none;
-  outline: none;
-  display: block;
-  box-sizing: border-box;
+    border: none;
+    outline: none;
+    display: block;
+    box-sizing: border-box;
 }
 article,
 aside,
@@ -108,36 +107,39 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
+    display: block;
 }
 body {
-  line-height: 1;
+    line-height: 1;
 }
 ol,
 ul {
-  list-style: none;
+    list-style: none;
+}
+li {
+    cursor: pointer;
 }
 div,
 input {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 img {
-  display: block;
+    display: block;
 }
 blockquote,
 q {
-  quotes: none;
+    quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
-  content: none;
+    content: '';
+    content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 h1,
@@ -147,6 +149,6 @@ h4,
 h5,
 h6,
 p {
-  padding: 0;
-  margin: 0;
+    padding: 0;
+    margin: 0;
 }
