--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,10 @@
 .t_big {
     font-size: 20px;
 }
+.t_danger {
+    font-size: 12px;
+    color: red;
+}
 .ml5 {
     margin-left: 5px;
 }
@@ -188,7 +192,8 @@ main {
 #sectionFirst .mainList:last-child {
     background-color: blueviolet;
 }
-#loginFormModal {
+#loginFormModal,
+#joinFormModal {
     position: fixed;
     top: 0;
     width: 100%;
@@ -196,7 +201,8 @@ main {
     z-index: 10;
     transition: all 0.3s;
 }
-#loginFormModal .loginBg {
+#loginFormModal .loginBg,
+#joinFormModal .joinBg {
     background: rgba(0, 0, 0, 0.6);
     width: 100%;
     height: 100%;
@@ -210,8 +216,19 @@ main {
     margin: auto;
     transform: translateY(calc(50vh - 150px));
 }
+#joinFormModal .joinForm {
+    width: 400px;
+    border-radius: 8px;
 
-#loginFormModal .input-group {
-    margin-bottom: 15px;
+    /* height: 800px; */
+    padding: 20px;
+    background: #fff;
+    margin: auto;
+    transform: translateY(calc(50vh - 275px));
+}
+
+#loginFormModal .input-group,
+#joinFormModal .input-group {
+    padding: 10px 0;
     text-align: left;
 }
